carousel fix and overflow-x hidden

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,6 +17,8 @@ code {
 html, body {
     padding: 0;
     margin: 0;
+    max-width: 100vw;
+    overflow-x: hidden;
 
     h1, h2, h3, h4, h5, p {
         margin: 0;
